DVK-1732 - fix multi select overflows from squat and sequence toggle multiselects (#1207)
* fix popover overflows

* delete unnecessary class name

--- a/admin/src/theme/dvk.css
+++ b/admin/src/theme/dvk.css
@@ -424,14 +424,6 @@ ion-popover.multiSelect::part(content) {
   overflow-y: auto;
 }
 
-ion-popover.multiSelect.squatSuitableFairwayAreaIds {
-  overflow-y: auto;
-}
-
-ion-popover.multiSelect.squatTargetFairwayIds {
-  overflow-y: auto;
-}
-
 ion-popover.multiSelect.fairwayIds::part(content),
 ion-popover.multiSelect.pilotRoutes::part(content),
 ion-popover.multiSelect.mareographs::part(content) {
